--- a/fe/src/scss/_page_home.scss
+++ b/fe/src/scss/_page_home.scss
@@ -131,11 +131,38 @@
   width: 100%;
   height: fit-content;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  label {
+    width: 4em;
+    display: block;
+  }
+  .category {
+    width: 265px;
+    border-radius: 0.25em;
+    box-shadow: $shadow;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    a {
+      display: flex;
+      color: #686868;
+      font-size: 16px;
+      padding: 0.75em 0.5em;
+    }
+    a:hover {
+      background: rgb(236, 236, 236);
+    }
+  }
   .img-container {
     display: block;
-    width: 100%;
+    width: calc(100% - 281px);
     padding-top: 23.5%; /* 1:1 Aspect Ratio */
     position: relative;
+    border-radius: 0.25em;
+    box-shadow: $shadow;
+    overflow: hidden;
     img {
       position: absolute;
       top: 0;
