--- a/fe/src/scss/_popup.scss
+++ b/fe/src/scss/_popup.scss
@@ -237,6 +237,11 @@
   .close-btn:hover {
     background-color: transparent;
   }
+  svg {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+  }
 }
 @media only screen and (max-width: 600px) {
   .info-popup {
