update test update user like dislike comment post

--- a/fe/src/scss/_page_post.scss
+++ b/fe/src/scss/_page_post.scss
@@ -32,6 +32,7 @@
         i {
           font-size: 30px;
           color: rgb(139, 139, 139);
+          cursor: pointer;
         }
         p {
           font-size: 26px;
