--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -739,14 +739,11 @@ button.dropdown-item {
       margin-top: 0.5em; }
 
 .confirm-popup {
-  padding: 1em;
-  padding-top: 2em;
-  padding-bottom: 2em;
+  padding: 2em 1em;
   background: white;
   border-radius: 0.25em;
   max-width: 100vw;
   min-width: 300px;
-  min-height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -762,7 +759,7 @@ button.dropdown-item {
     background-color: #00949e; }
   .confirm-popup .cancel-btn {
     background-color: #b94848;
-    margin-left: 0.5em; }
+    margin-left: 1.5em; }
 
 .status-popup {
   padding: 1em;
@@ -851,6 +848,9 @@ button.dropdown-item {
     text-transform: uppercase;
     padding: 7px 20px;
     margin-top: 1em; }
+  .loading-popup svg {
+    width: 80px;
+    height: 80px; }
 
 .autohide-popup {
   padding: 1em 2em;
@@ -1159,6 +1159,10 @@ button.dropdown-item {
     text-align: center;
     margin: auto;
     margin-top: 10px; }
+  .new-post-form svg {
+    width: 40px;
+    height: 40px;
+    margin: -10px 0; }
 
 .test-page {
   background: white;
@@ -1867,7 +1871,8 @@ button.dropdown-item {
         margin-top: 1em; }
         .post-page .main-view > div:first-of-type .main-view__post__action i {
           font-size: 30px;
-          color: #8b8b8b; }
+          color: #8b8b8b;
+          cursor: pointer; }
         .post-page .main-view > div:first-of-type .main-view__post__action p {
           font-size: 26px;
           color: #4a95c6; }
