--- a/fe/src/scss/_base.scss
+++ b/fe/src/scss/_base.scss
@@ -7,6 +7,8 @@
   text-decoration: none;
   background-color: transparent;
   font-family: roboto, sans-serif;
+  font-family: "Nunito", "Helvetica Neue", "Roboto", Helvetica, Arial,
+    sans-serif;
 }
 body {
   position: relative;
