--- a/fe/src/scss/_page_test.scss
+++ b/fe/src/scss/_page_test.scss
@@ -4,207 +4,12 @@
   padding: 0;
   display: flex;
   max-width: unset !important;
-  .main-view {
-    padding: 1em;
-    width: 65%;
-    .list-part {
-      margin-top: 1.5em;
-      display: flex;
-      div {
-        width: 6.5em;
-        height: 3em;
-        line-height: 3em;
-        text-align: center;
-        background: rgb(219, 219, 219);
-        font-size: 14px;
-        margin-right: 0.5em;
-        color: #333;
-        cursor: pointer;
-      }
-      .part-active {
-        background: $test-page-main-color;
-        color: white;
-      }
-    }
-    h2 {
-      font-size: 22px;
-    }
-    .part-direction {
-      border: 1px rgb(197, 197, 197) solid;
-      width: 100%;
-      line-height: 1.25em;
-      font-weight: bold;
-      font-size: 15px;
-      padding: 0.5em;
-      margin-top: 1em;
-    }
-    img {
-      width: 420px;
-      max-width: 100%;
-      margin: auto;
-      margin-top: 2em;
-      display: block;
-    }
-    audio {
-      margin: auto;
-      margin-top: 0.5em;
-      display: block;
-      width: 300px;
-    }
-    span {
-      margin-top: 1em;
-      font-weight: bold;
-      font-size: 15px;
-    }
-    .content-display {
-      margin-top: 1em;
-      margin-bottom: 1em;
-      padding-left: 0.5em;
-      padding-right: 0.5em;
-    }
-    .answers-display {
-      margin-left: 1em;
-      margin-top: 0.5em;
-    }
-    .answer {
-      display: flex;
-      align-items: center;
-    }
-    .true-answer {
-      font-weight: bold !important;
-      color: rgb(0, 216, 169);
-    }
-    .false-answer {
-      color: #ff6666;
-    }
-    .answer span {
-      font-weight: normal;
-      margin-top: 0.5em;
-      margin-left: 0.5em;
-      max-width: calc(100% - 2.75em);
-    }
-    .answer button {
-      margin-top: 0.5em;
-      height: 1.75em;
-      width: 1.75em;
-      border-radius: 100%;
-      border: $border;
-      line-height: 1.75em;
-      text-align: center;
-      font-size: 14px;
-      color: rgb(105, 105, 105);
-    }
-    .answer button:hover {
-      background: rgb(104, 104, 104);
-      color: white;
-    }
-    .answer-active {
-      background: rgb(104, 104, 104);
-      color: white !important;
-    }
-    .action {
-      width: fit-content;
-      margin: auto;
-      #submitBtn {
-        width: 6em;
-        height: 2.75em;
-        border: $border;
-        background: $test-page-main-color;
-        color: white;
-      }
-      #nextBtn {
-        margin-left: 1em;
-        width: 6em;
-        height: 2.75em;
-        border: $border;
-      }
-      #prevBtn {
-        margin-right: 1em;
-        width: 6em;
-        height: 2.75em;
-        border: $border;
-      }
-    }
-    .explanation-display {
-      width: 100%;
-      margin-top: 1em;
-      margin-bottom: 1em;
-      font-size: 15px;
-      padding: 0.5em;
-      border: 1px rgb(197, 197, 197) solid;
-      div {
-        line-height: 1.5em;
-      }
-    }
-  }
-  .sub-view {
-    width: 35%;
-    padding: 1em;
-    .timer {
-      position: -webkit-sticky;
-      position: sticky;
-      top: 1em;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: $test-page-main-color;
-      color: white;
-      padding: 0.5em;
-      div {
-        text-align: center;
-      }
-      span {
-        font-size: 22px;
-        font-weight: lighter;
-      }
-    }
-    .redo,
-    .submit {
-      cursor: pointer;
-    }
-    .list-question {
-      position: -webkit-sticky;
-      position: sticky;
-      top: 4em;
-      padding: 0.5em;
-      display: flex;
-      flex-wrap: wrap;
-      .auto-padding {
-        padding: calc(50% - 1em);
-      }
-      button {
-        display: block;
-        line-height: 100%;
-        width: 100%;
-        text-align: center;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        border: $border;
-      }
-      button:hover {
-        background: rgb(104, 104, 104);
-        color: white;
-      }
-      .question-active {
-        background: rgb(104, 104, 104);
-        color: white;
-      }
-      .question-wrong {
-        border: 1px solid #e25959;
-      }
-      .question-true {
-        border: 1px solid rgb(0, 182, 142);
-      }
-    }
-  }
   .section {
-    width: 52vw;
+    width: 55vw;
     height: calc(100vh - 152px);
     padding: 2em 1.5em;
     overflow-y: scroll;
+    display: none;
     h4 {
       font-weight: 700;
       letter-spacing: 2px;
@@ -213,13 +18,19 @@
       font-size: 13px;
     }
   }
+  .section.listening {
+    height: calc(100vh - 100px);
+  }
+  .section.active {
+    display: block;
+  }
   .section-control {
     padding: 12px 30px;
     background-color: #d4dae0;
     position: fixed;
     bottom: 50px;
     right: 0;
-    width: 52vw;
+    width: 55vw;
     z-index: 3;
     display: flex;
     align-items: center;
@@ -243,6 +54,30 @@
         margin-left: 15px;
         border-radius: 6px;
       }
+      button.disable {
+        color: rgb(97, 97, 97);
+        background: #aaa;
+        user-select: none;
+      }
+    }
+  }
+  .section-control.listening {
+    right: 0;
+    width: 45vw;
+    h4 {
+      color: #5bc3d2;
+    }
+    .row {
+      width: fit-content;
+      button {
+        background: #5bc3d2;
+        color: white;
+      }
+      button.disable {
+        color: rgb(97, 97, 97);
+        background: #aaa;
+        user-select: none;
+      }
     }
   }
   .question {
@@ -250,15 +85,20 @@
       color: #284664;
       font-size: 20px;
       font-weight: 700;
-      margin: 10px 0;
+      margin: 15px 0;
     }
-  }
-  .question.matching {
-    .row {
-      width: fit-content;
-      justify-content: unset;
+    .answers {
+      width: 30px;
+      height: 30px;
+      display: flex;
+      font-weight: 700;
       align-items: center;
-      margin: 10px 0;
+      justify-content: center;
+      color: #333;
+      background: #dedede;
+      border-radius: 100%;
+      font-size: 14px;
+      margin-right: 10px;
     }
     .number {
       width: 30px;
@@ -273,6 +113,49 @@
       font-size: 14px;
       margin-right: 10px;
     }
+    .row {
+      width: fit-content;
+      justify-content: unset;
+      align-items: center;
+      margin: 10px 0;
+    }
+    .guild {
+      font-style: italic;
+    }
+    .result {
+      label {
+        display: block;
+      }
+      strong {
+        font-size: 18px;
+        margin-right: 10px;
+        min-width: 20px;
+        display: inline-block;
+      }
+      .true {
+        color: #008327;
+      }
+      .false {
+        color: #e90606;
+      }
+    }
+    .explain {
+      button {
+        color: #327847;
+        border-radius: 4px;
+        font-size: 14px;
+        padding: 4px 8px;
+        border: 1px solid #327847;
+        margin-right: 10px;
+      }
+    }
+    input {
+      font-size: 16px;
+      font-weight: 600;
+      color: #282828;
+    }
+  }
+  .question.matching {
     select {
       min-width: 100px;
       max-width: 130px;
@@ -283,6 +166,182 @@
       height: 24px;
       font-size: 16px;
       margin-right: 10px;
+    }
+  }
+  .question.multiple-choice {
+    input {
+      width: 16px;
+      height: 16px;
+      margin-right: 10px;
+    }
+  }
+  .question.multiple-choice-question-answers {
+    input {
+      width: 16px;
+      height: 16px;
+      margin-right: 10px;
+    }
+    .content {
+      margin-top: 10px;
+    }
+  }
+  .question.single-choice-question-answers {
+    input {
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+    }
+    .guild {
+      margin-bottom: 15px;
+    }
+    .result {
+      display: flex;
+      align-items: center;
+      strong {
+        margin-left: 10px;
+      }
+      .row {
+        margin: 0;
+      }
+    }
+  }
+  .question.sentence-completion {
+    .guild {
+      margin-bottom: 10px;
+    }
+    .content {
+      margin: 20px 0;
+    }
+    input {
+      border-bottom: 2px dashed $sub-text-color;
+      color: $sub-text-color;
+    }
+    .result {
+      display: flex;
+      align-items: center;
+      strong {
+        font-size: 16px;
+        margin-left: 10px;
+      }
+      .row {
+        margin: 0;
+      }
+    }
+  }
+  .question.true-false-question {
+    select {
+      width: 120px;
+      border-radius: 2px;
+      border: 1px solid #aaa;
+      margin: 0px 5px 0 0;
+      outline: none;
+      height: 24px;
+      font-size: 16px;
+      margin-right: 10px;
+    }
+    .content {
+      width: calc(100% - 130px);
+    }
+    .row {
+      margin: 20px 0;
+    }
+    .table {
+      border: 2px solid rgb(170, 170, 170);
+      margin-top: 15px;
+      .row {
+        margin: 0;
+        padding: 10px 25px;
+        width: 100%;
+      }
+      .odd {
+        background: #f0f0f0;
+      }
+      span {
+        font-weight: 700;
+        color: #282828;
+        display: block;
+        width: 120px;
+      }
+    }
+    .result {
+      display: flex;
+      align-items: center;
+      strong {
+        font-size: 16px;
+        margin-left: 10px;
+      }
+      .row {
+        margin: 0;
+      }
+    }
+  }
+  .question.complete-diagram {
+    img {
+      max-width: 100%;
+      object-fit: contain;
+      margin: 10px 0;
+    }
+    input {
+      border-bottom: 2px dashed $sub-text-color;
+      color: $sub-text-color;
+    }
+    .result {
+      strong {
+        margin-left: 10px;
+      }
+    }
+  }
+  .question.complete-table {
+    table {
+      margin-top: 15px;
+      border-collapse: collapse;
+    }
+    th,
+    td {
+      min-width: 180px;
+      padding: 5px;
+      border: 1px solid $sub-text-color;
+    }
+    th {
+      background: #cacaca;
+    }
+    input {
+      border-bottom: 2px dashed $sub-text-color;
+      color: $sub-text-color;
+    }
+    .row {
+      .content {
+        width: calc(100% - 40px);
+      }
+    }
+    .result {
+      strong {
+        margin-left: 10px;
+      }
+    }
+  }
+  .question.complete-paragraph {
+    width: 100%;
+    input {
+      border-bottom: 2px dashed $sub-text-color;
+      color: $sub-text-color;
+    }
+    .wrapper {
+      margin-top: 15px;
+      padding: 15px;
+      border: 2px solid #284664;
+    }
+    .title {
+      text-align: center;
+      color: #284664;
+      font-size: 20px;
+      margin-bottom: 5px;
+    }
+    .content {
+      line-height: 2em;
+    }
+    .true-answers {
+      margin-left: 10px;
     }
   }
 }
@@ -305,7 +364,7 @@
     color: #327847;
     font-weight: 700;
   }
-  .clock {
+  .timer {
     font-weight: 700;
     font-size: 24px;
     color: whitesmoke;
@@ -333,10 +392,11 @@
     font-size: 18px;
   }
 }
-.paragraph-display {
+.paragraph-display,
+.script-display {
   background: #d6e4da;
   padding: 1em 30px;
-  width: 48%;
+  width: 45%;
   height: calc(100vh - 100px);
   overflow-y: scroll;
   h2,
@@ -353,21 +413,147 @@
     color: #282828;
     text-align: justify;
   }
+  .high-light {
+    background: #f9a957;
+    color: #282828;
+  }
+  strong {
+    background: #fc8b1b;
+    padding: 0 6px;
+    color: #282828;
+  }
+  strong.active {
+    background: #327847;
+    color: white;
+  }
 }
-.paragraph-display::-webkit-scrollbar,
+.script-display {
+  padding: 0;
+  position: relative;
+  padding: 90px 0 60px;
+  background: #d6f0f4;
+  .paragraph-content {
+    padding: 0 20px;
+    line-height: 1.5em;
+    margin: 10px 0;
+  }
+  .row {
+    justify-content: unset;
+  }
+  .audio {
+    background: #d6f0f4;
+    display: block;
+    position: fixed;
+    width: 45vw;
+    right: 0;
+    top: 50px;
+  }
+  .play-btn {
+    width: 90px;
+    height: 45px;
+    color: white;
+    background: #5bc3d2;
+    border-radius: 0;
+    img {
+      width: 20px;
+      height: 20px;
+    }
+  }
+  .avt {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 85px;
+    width: 100%;
+    height: calc(100% - 90px);
+    object-fit: cover;
+  }
+  .time {
+    margin: 0;
+    width: 80px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 700;
+    color: #84d1dd;
+    line-height: 44px;
+    border-bottom: 1px solid #5bc3d2;
+    border-top: none;
+  }
+  .progress-container {
+    display: flex;
+    align-items: center;
+    width: calc(45vw - 250px);
+    height: 45px;
+    border-bottom: 1px solid #5bc3d2;
+  }
+  .forward-btn {
+    height: 40px;
+    width: 60px;
+  }
+  .forward-container {
+    border-right: 1px solid #5bc3d2;
+    padding: 0 20px;
+  }
+  .action {
+    border-bottom: 1px solid #5bc3d2;
+  }
+  .volume-container {
+    display: flex;
+    align-items: center;
+    button {
+      height: 40px;
+      width: 60px;
+    }
+    .range {
+      width: 100px;
+      border: none;
+      --seek-before-width: 80;
+      background: whitesmoke;
+      outline: none;
+      position: relative;
+      appearance: none;
+      height: 8px;
+    }
+    .range::before {
+      content: "";
+      height: 8px;
+      width: 80px;
+      background-color: #5bc3d2;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 2;
+      cursor: pointer;
+    }
+    .range::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      height: 14px;
+      width: 14px;
+      border-radius: 50%;
+      border: none;
+      background-color: #5bc3d2;
+      cursor: pointer;
+      position: relative;
+      margin: 0px 0 0 0;
+      z-index: 3;
+      box-sizing: border-box;
+    }
+  }
+}
+.custom-scroll::-webkit-scrollbar,
 .section::-webkit-scrollbar {
   width: 10px;
 }
-.paragraph-display::-webkit-scrollbar-track,
+.custom-scroll::-webkit-scrollbar-track,
 .section::-webkit-scrollbar-track {
   background: transparent;
 }
-.paragraph-display::-webkit-scrollbar-thumb,
+.custom-scroll::-webkit-scrollbar-thumb,
 .section::-webkit-scrollbar-thumb {
   background: rgb(168, 168, 168);
-  border-radius: 4px;
+  border-radius: 0px;
 }
-.paragraph-display::-webkit-scrollbar-thumb:hover,
+.custom-scroll::-webkit-scrollbar-thumb:hover,
 .section::-webkit-scrollbar-thumb:hover {
   background: rgb(95, 95, 95);
 }
@@ -379,26 +565,47 @@
   position: relative;
   .card_container {
     box-shadow: 0 0 6px 0 rgb(156, 156, 156);
-    padding-bottom: 1em;
-    border-radius: 0.25em;
+    border-radius: 2px;
     overflow: hidden;
-    img {
+    .img-container {
+      display: block;
+      position: relative;
+      margin: auto;
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .img-container {
       width: 100%;
-      object-fit: contain;
+      padding-top: 90%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+        object-position: 50% 50%;
+      }
     }
     .name {
       color: #333;
-      margin-top: 0.5em;
-      margin-left: 0.5em;
-      margin-right: 0.5em;
-      font-size: 14px;
-      height: 2.25em;
+      font-size: 16px;
+      line-height: 1.25em;
+      padding: 0 5px;
+      height: 2.5em;
       font-weight: bold;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
+      text-align: center;
+      margin-top: 5px;
     }
     .level {
       font-size: 14px;
@@ -413,11 +620,10 @@
       border-top-right-radius: 0.25em;
     }
     .time {
-      margin-top: 0.25em;
-      margin-left: 0.5em;
-      margin-right: 0.5em;
-      font-size: 14px;
-      color: $mini-text-color;
+      margin: 5px 0 15px;
+      font-size: 15px;
+      color: $sub-text-color;
+      text-align: center;
     }
   }
   .card_container:hover {
@@ -542,4 +748,111 @@
   .test_card {
     width: 25%;
   }
+}
+
+.audioPlayer {
+  --primary: #f40082;
+  --secondary: #ffd200;
+
+  align-items: center;
+  display: flex;
+  width: 700px;
+}
+
+.playPause {
+  background: var(--primary);
+  border: none;
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+  font-size: 32px;
+  color: var(--secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.play {
+  position: relative;
+  left: 5px;
+}
+
+.currentTime,
+.duration {
+  font-family: monospace;
+  font-size: 16px;
+}
+
+.currentTime {
+  margin-left: 25px;
+}
+
+.progressBar {
+  --bar-bg: whitesmoke;
+  --seek-before-width: 0;
+  --seek-before-color: #5bc3d2;
+  --knobby: #5bc3d2;
+  --selectedKnobby: #5bc3d2;
+
+  appearance: none;
+  background: var(--bar-bg);
+  position: relative;
+  width: 100%;
+  height: 8px;
+  outline: none;
+}
+
+/* progress bar - safari */
+.progressBar::-webkit-slider-runnable-track {
+  background: var(--bar-bg);
+  position: relative;
+  width: 100%;
+  height: 8px;
+  outline: none;
+}
+/* progress bar - firefox */
+.progressBar::-moz-range-track {
+  background: var(--bar-bg);
+  position: relative;
+  width: 100%;
+  height: 8px;
+  outline: none;
+}
+
+.progressBar::-moz-focus-outer {
+  border: 0;
+}
+
+/* progress bar - chrome and safari */
+.progressBar::before {
+  content: "";
+  height: 8px;
+  width: var(--seek-before-width);
+  background-color: var(--seek-before-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* knobby - chrome and safari */
+.progressBar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  border: none;
+  background-color: var(--knobby);
+  cursor: pointer;
+  position: relative;
+  margin: -3px 0 0 -2px;
+  z-index: 3;
+  box-sizing: border-box;
+}
+
+/* knobby while dragging - chrome and safari */
+.progressBar:active::-webkit-slider-thumb {
+  transform: scale(1.2);
+  background: var(--selectedKnobby);
 }
