--- a/fe/src/scss/_popup.scss
+++ b/fe/src/scss/_popup.scss
@@ -136,49 +136,61 @@
 }
 .score-popup {
   display: flex;
+  background: #d6f0f4;
   max-width: 100%;
   max-height: 100%;
-  width: 300px;
+  width: 280px;
   height: 400px;
   background: white;
   border-radius: 0.25em;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   font-size: 1.25em;
   position: relative;
-  button {
-    top: 20px;
-    right: 20px;
-    position: absolute;
-    width: 1.75em;
-    height: 1.75em;
-    border-radius: 0.25em;
-    background: #ff6666;
-    color: white;
+  overflow: hidden;
+  h3 {
+    font-size: 22px;
+    line-height: 60px;
+    color: #284664;
   }
-  > div {
-    cursor: pointer;
-    width: 6em;
-    height: 2.5em;
-    border: 1px #333 solid;
-    text-align: center;
-    line-height: 2.5em;
-    border-radius: 0.25em;
-    margin-top: 2em;
-    font-size: 0.75em !important;
+  .score {
+    width: 100%;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #d6f0f4;
+    h4 {
+      background: white;
+      width: 120px;
+      height: 120px;
+      font-size: 24px;
+      border-radius: 100%;
+      align-items: center;
+      border: 4px solid #5bc3d2;
+      color: #284664;
+      display: flex;
+      justify-content: center;
+    }
   }
-  span {
-    margin-top: 1em;
-    width: 7em;
-    height: 7em;
-    line-height: 7em;
-    font-weight: lighter;
-    text-align: center;
-    border-radius: 100%;
-    background: $test-page-main-color;
-    color: white;
-    display: block;
+  .action {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    button {
+      font-weight: 700;
+      color: #268695;
+      border-radius: 4px;
+      font-size: 15px;
+      padding: 4px 8px;
+      height: fit-content;
+      border: 1px solid #268695;
+      margin-right: 10px;
+      background: white;
+    }
   }
 }
 .loading-popup {
