--- a/fe/src/scss/_page_admin.scss
+++ b/fe/src/scss/_page_admin.scss
@@ -108,20 +108,23 @@
         border-bottom: 1px solid rgb(117, 117, 117);
       }
       .name {
-        width: 30%;
+        width: 40%;
         padding-right: 0.5em;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
       }
       .level {
-        width: 20%;
+        width: 15%;
+        text-align: center;
       }
       .number-questions {
         width: 15%;
+        text-align: center;
       }
       .time {
-        width: 20%;
+        width: 15%;
+        text-align: center;
       }
       .action {
         width: 15%;
@@ -224,7 +227,7 @@
     .info {
       width: 20%;
       min-width: 160px;
-      height: 5em;
+      height: 5.5em;
       padding: 0.5em;
       box-shadow: 0 0 2px 0 rgb(136, 136, 136);
       display: flex;
