--- a/fe/src/scss/_page_forum.scss
+++ b/fe/src/scss/_page_forum.scss
@@ -90,15 +90,24 @@
     justify-content: space-between;
   }
   .post__avt {
-    width: 2.5em;
-    height: 2.5em;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0b6aa4;
-    color: white;
-    font-weight: 600;
+    color: #0072b9;
     border-radius: 2px;
+    font-size: 18px;
+    position: relative;
+    font-weight: bolder;
+    img {
+      position: absolute;
+      width: calc(100% + 10px);
+      height: calc(100% + 10px);
+      object-fit: contain;
+      top: -5px;
+      left: -5px;
+    }
   }
   .post__preview {
     margin-top: 10px;
