--- a/fe/src/scss/_page_home.scss
+++ b/fe/src/scss/_page_home.scss
@@ -134,8 +134,13 @@
   display: flex;
   justify-content: space-between;
   label {
-    width: 4em;
+    text-align: center;
+    width: 3em;
+    font-size: 22px;
     display: block;
+    i {
+      color: #929292;
+    }
   }
   .category {
     width: 265px;
@@ -144,12 +149,12 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     a {
+      font-size: 18px;
       display: flex;
       color: #686868;
-      font-size: 16px;
-      padding: 0.75em 0.5em;
+      padding: 0.875em 0.5em;
     }
     a:hover {
       background: rgb(236, 236, 236);
